Check newUpdate all endpoint