@@ -9,6 +9,7 @@ import org.springframework.web.bind.annotation.*;
 import javax.transaction.Transactional;
 import java.util.List;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 @RestController
 @RequestMapping("/films")
@@ -18,6 +19,7 @@ public class FilmController {
     FilmService filmService;
 
     @PostMapping("/create")
+   // @CrossOrigin( origins = "https://gianzrareservasibioskop-production.up.railway.app/films/create")
     public FilmDTO create(@RequestBody FilmDTO request) {
         final Films film = filmService.mapToEntity(request);
         final Films result = filmService.create(film);
@@ -25,6 +27,7 @@ public class FilmController {
     }
 
     @PutMapping("update/{film_code}")
+    //@CrossOrigin( origins = "https://gianzrareservasibioskop-production.up.railway.app/films/update")
     public FilmDTO update(@PathVariable Long film_code, @RequestBody FilmDTO request) {
         final Films film = filmService.mapToEntity(request);
         final Films result = filmService.update(film_code, film);
@@ -32,8 +35,9 @@ public class FilmController {
     }
 
     @GetMapping("/all")
+   // @CrossOrigin( origins = "https://gianzrareservasibioskop-production.up.railway.app/films/all")
     public List<FilmDTO> findAll() {
-        return filmService.findAll().stream().map(film -> filmService.mapToDto(film)).collect(Collectors.toList());
+        return filmService.findAll().stream().map(film -> filmService.mapToDto(film)).toList();
     }
 
     @DeleteMapping("/delete/{film_code}")
